--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -16,4 +16,4 @@ FROM httpd:alpine
 WORKDIR /usr/local/apache2/htdocs
 COPY --from=build /build/build/ .
 RUN chown -R www-data:www-data /usr/local/apache2/htdocs \
-    && sed -i "s/Listen 80/Listen \${PORT}/g" /usr/local/apache2/conf/httpd.conf
+    && sed -i 's/80/'"$PORT"'/' /usr/local/apache2/conf/httpd.conf
